[project]
name = "oh-pytorch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipython>=8.31.0",
  "jupyterlab>=4.3.4",
  "marimo>=0.10.10",
  "numpy>=2.2.1",
  "ruff>=0.9.0",
  "torch>=2.3.0",
]


[tool.uv.sources]
torch = { index = "pytorch-cu121" }

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true
